--- a/team.html
+++ b/team.html
@@ -4,45 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team - Fire Alarm System</title>
-    <link href="assets/styles/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <header class="header">
-        <nav class="nav">
+    <header>
+        <nav>
             <h1>Fire Alarm System</h1>
-            <ul class="nav-links">
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="team.html">Team</a></li>
-                <li><a href="device.html" id="device-button">Device</a></li>
+                <li><a href="device-login.html">Device</a></li>
             </ul>
         </nav>
     </header>
 
-    <main class="container">
-        <h2>Meet Our Team</h2>
-        <section class="team-grid">
-            <!-- Team Member 1 -->
-            <div class="team-card">
-                <img src="assets/images/team1.jpg" alt="John Doe" class="team-photo">
-                <h3>John Doe</h3>
-                <p>Lead Engineer</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae.</p>
-            </div>
-
-            <!-- Team Member 2 -->
-            <div class="team-card">
-                <img src="assets/images/team2.jpg" alt="Jane Smith" class="team-photo">
-                <h3>Jane Smith</h3>
-                <p>Project Manager</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae.</p>
-            </div>
-
-            <!-- Team Member 3 -->
-            <div class="team-card">
-                <img src="assets/images/team3.jpg" alt="Mike Johnson" class="team-photo">
-                <h3>Mike Johnson</h3>
-                <p>Software Developer</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae.</p>
+    <main>
+        <section class="team-section">
+            <h2>Meet the Team</h2>
+            <div class="team-grid">
+                <div class="team-member">
+                    <img src="assets/images/member1.jpg" alt="Team Member 1">
+                    <h3>John Doe</h3>
+                    <p>Lead Engineer</p>
+                </div>
+                <div class="team-member">
+                    <img src="assets/images/member2.jpg" alt="Team Member 2">
+                    <h3>Jane Smith</h3>
+                    <p>Backend Developer</p>
+                </div>
+                <div class="team-member">
+                    <img src="assets/images/member3.jpg" alt="Team Member 3">
+                    <h3>Alex Brown</h3>
+                    <p>Frontend Developer</p>
+                </div>
             </div>
         </section>
     </main>
